--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -347,3 +347,26 @@ table.dataTable thead .sorting:after {
 .panel-yellow a:hover {
     color: #df8a13;
 }
+
+.page-header{
+  padding: 0px;
+  margin: 10px 0px 10px 0px;
+  height: 40px;
+}
+/* CSS REQUIRED */
+.state-icon {
+  left: -5px;
+}
+.list-group-item-primary {
+  color: rgb(255, 255, 255);
+  background-color: rgb(66, 139, 202);
+}
+
+/* DEMO ONLY - REMOVES UNWANTED MARGIN */
+.well .list-group {
+  margin-bottom: 0px;
+}
+
+button {
+  outline: none !important;
+}
