--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -23,7 +23,7 @@ body {
 @media(min-width:768px) {
     #page-wrapper {
         position: inherit;
-        margin: 0 0 0 250px;
+        margin: 0 0 0 200px;
         padding: 0 30px;
         border-left: 0px solid #e7e7e7;
     }
@@ -101,15 +101,17 @@ body {
 }
 
 .sidebar ul li a.active {
-    background-color: #0079D5;
+    background-color: #e7e7e7;
 }
-
+/*
 .sidebar ul li a {
   color: #fff;
 }
+
 .sidebar li a:hover{
   background-color: #315876;
 }
+*/
 .sidebar .arrow {
     float: right;
 }
@@ -139,7 +141,7 @@ body {
     .sidebar {
         z-index: 1;
         position: absolute;
-        width: 250px;
+        width: 200px;
         margin-top: 51px;
     }
 
@@ -377,4 +379,60 @@ table.dataTable thead .sorting:after {
 
 button {
   outline: none !important;
+}
+
+
+
+/* ERROR ALERTS */
+.error-notice {
+  margin: 5px 5px; /* Making sure to keep some distance from all side */
+}
+
+.oaerror {
+  width: 90%; /* Configure it fit in your design  */
+  margin: 0 auto; /* Centering Stuff */
+  background-color: #FFFFFF; /* Default background */
+  padding: 20px;
+  border: 1px solid #eee;
+  border-left-width: 5px;
+  border-radius: 3px;
+  margin: 0 auto;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+}
+
+.danger {
+  border-left-color: #d9534f; /* Left side border color */
+  background-color: rgba(217, 83, 79, 0.4); /* Same color as the left border with reduced alpha to 0.1 */
+}
+
+.danger strong {
+  color:  #d9534f;
+}
+
+.warning {
+  border-left-color: #f0ad4e;
+  background-color: rgba(240, 173, 78, 0.4);
+}
+
+.warning strong {
+  color: #f0ad4e;
+}
+
+.info {
+  border-left-color: #5bc0de;
+  background-color: rgba(91, 192, 222, 0.4);
+}
+
+.info strong {
+  color: #5bc0de;
+}
+
+.success {
+  border-left-color: #2b542c;
+  background-color: rgba(43, 84, 44, 0.4);
+}
+
+.success strong {
+  color: #2b542c;
 }
