--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -86,6 +86,9 @@ body {
     right: 0;
     left: auto;
 }
+.navbar-top-links a {
+  color: #fff;
+}
 
 .sidebar .sidebar-nav.navbar-collapse {
     padding-right: 0;
@@ -101,9 +104,9 @@ body {
 }
 
 .sidebar ul li a.active {
-    background-color: #e7e7e7;
+ background-color: #007AF5;
 }
-/*
+
 .sidebar ul li a {
   color: #fff;
 }
@@ -111,7 +114,7 @@ body {
 .sidebar li a:hover{
   background-color: #315876;
 }
-*/
+
 .sidebar .arrow {
     float: right;
 }
